--- a/app/src/main/res/layout/city_item.xml
+++ b/app/src/main/res/layout/city_item.xml
@@ -18,6 +18,8 @@
         app:layout_constraintTop_toTopOf="parent">
 
 
+<!--        <com.contrarywind.view.WheelView-->
+
     </LinearLayout>
 
     <Button
