--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -6,24 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".view.one.OneFragment">
 
-    <TextView
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/shape_logincard_bg"
-        android:gravity="center"
-        android:padding="10dp"
-        android:text="相机"
-        android:textColor="#ffffff"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <!--    <TextView-->
+    <!--        android:layout_width="100dp"-->
+    <!--        android:layout_height="50dp"-->
+    <!--        android:layout_marginTop="20dp"-->
+    <!--        android:background="@drawable/shape_logincard_bg"-->
+    <!--        android:gravity="center"-->
+    <!--        android:padding="10dp"-->
+    <!--        android:text="相机"-->
+    <!--        android:textColor="#ffffff"-->
+    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
+    <!--        app:layout_constraintRight_toRightOf="parent"-->
+    <!--        app:layout_constraintTop_toTopOf="parent" />-->
 
     <LinearLayout
         android:id="@+id/lay1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="20dp"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent">
@@ -39,31 +39,32 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="相册" />
+
         <Button
-            android:text="保存图片"
             android:id="@+id/save_photo"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:text="保存图片" />
     </LinearLayout>
-    <TextView
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/shape_logincard_bg"
-        android:gravity="center"
-        android:padding="10dp"
-        android:text="通讯录"
-        android:textColor="#ffffff"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/lay1" />
+    <!--    <TextView-->
+    <!--        android:layout_width="100dp"-->
+    <!--        android:layout_height="50dp"-->
+    <!--        android:layout_marginTop="20dp"-->
+    <!--        android:background="@drawable/shape_logincard_bg"-->
+    <!--        android:gravity="center"-->
+    <!--        android:padding="10dp"-->
+    <!--        android:text="通讯录"-->
+    <!--        android:textColor="#ffffff"-->
+    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
+    <!--        app:layout_constraintRight_toRightOf="parent"-->
+    <!--        app:layout_constraintTop_toBottomOf="@id/lay1" />-->
     <LinearLayout
         android:id="@+id/lay2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:orientation="vertical"
+        android:layout_marginTop="10dp"
         android:gravity="center"
+        android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@id/lay1">
 
         <Button
@@ -71,35 +72,36 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="通讯录" />
+
         <TextView
             android:id="@+id/txt_content"
-            android:layout_margin="20dp"
-            android:textSize="20sp"
-            android:textColor="@color/colorAccent"
-            android:text="联系人"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:text="联系人"
+            android:textColor="@color/colorAccent"
+            android:textSize="20sp" />
     </LinearLayout>
 
-    <TextView
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/shape_logincard_bg"
-        android:gravity="center"
-        android:padding="10dp"
-        android:text="通讯录"
-        android:textColor="#ffffff"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/lay2" />
+    <!--    <TextView-->
+    <!--        android:layout_width="100dp"-->
+    <!--        android:layout_height="50dp"-->
+    <!--        android:layout_marginTop="20dp"-->
+    <!--        android:background="@drawable/shape_logincard_bg"-->
+    <!--        android:gravity="center"-->
+    <!--        android:padding="10dp"-->
+    <!--        android:text="通讯录"-->
+    <!--        android:textColor="#ffffff"-->
+    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
+    <!--        app:layout_constraintRight_toRightOf="parent"-->
+    <!--        app:layout_constraintTop_toBottomOf="@id/lay2" />-->
     <LinearLayout
         android:id="@+id/lay3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:orientation="vertical"
+        android:layout_marginTop="10dp"
         android:gravity="center"
+        android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@id/lay2">
 
         <Button
@@ -107,22 +109,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="定位" />
+
         <TextView
             android:id="@+id/txt_location"
-            android:layout_margin="20dp"
-            android:textSize="20sp"
-            android:textColor="@color/colorAccent"
-            android:text="联系人"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:text="联系人"
+            android:textColor="@color/colorAccent"
+            android:textSize="20sp" />
     </LinearLayout>
+
     <Button
         android:id="@+id/btn_wheel"
-        android:text="请选择城市"
-        app:layout_constraintTop_toBottomOf="@id/lay3"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:text="请选择城市"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/lay3" />
+
     <ImageView
         android:id="@+id/img_show"
         android:layout_width="200dp"
@@ -132,4 +137,13 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
+
+    <Button
+        android:id="@+id/btn_share"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="分享面板"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_wheel" />
 </androidx.constraintlayout.widget.ConstraintLayout>
