--- a/app/src/main/res/layout/activity_umshare.xml
+++ b/app/src/main/res/layout/activity_umshare.xml
@@ -13,7 +13,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="分享面板"
+        android:text="分享纯文本"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/actionbar" />
+    <Button
+        android:id="@+id/btn_shareImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="分享图片"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_shareboard" />
 </androidx.constraintlayout.widget.ConstraintLayout>
