--- a/app/src/main/res/layout/picture.xml
+++ b/app/src/main/res/layout/picture.xml
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:fitsSystemWindows="true"
-    android:background="@color/colorPrimary"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <TextView
-        android:id="@+id/txt_activity_title"
-        android:text="UMengShare"
+    <Button
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:textColor="#ffffff"
-        android:layout_margin="20dp"
-        android:textSize="20sp"
+        android:id="@+id/btn_open"
+        android:text="打开相册"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
